Api rest mascotas (1 tabla)

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,5 @@ server.port=8082
 spring.jpa.generate-ddl=true
 spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQLDialect
 spring.jpa.hibernate.ddl-auto = update
+
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
