--- a/pom.xml
+++ b/pom.xml
@@ -17,18 +17,17 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-data-jpa</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-        </dependency>
-
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-data-jpa</artifactId>
+            </dependency>
+            <dependency>
+                <groupId>org.springframework.boot</groupId>
+                <artifactId>spring-boot-starter-web</artifactId>
+            </dependency>
         <dependency>
             <groupId>mysql</groupId>
-            <artifactId>mysql-connector-java</artifactId>
+            <artifactId>mysql-connector-java</artifactId>zz
             <version>8.0.30</version>
         </dependency>
         <dependency>
@@ -64,6 +63,13 @@
             <artifactId>springdoc-openapi-ui</artifactId>
             <version>1.5.2</version>
         </dependency>
+        <!-- https://mvnrepository.com/artifact/org.openidentityplatform.commons/json-web-token -->
+        <dependency>
+            <groupId>org.openidentityplatform.commons</groupId>
+            <artifactId>json-web-token</artifactId>
+            <version>2.0.17</version>
+        </dependency>
+
 
     </dependencies>
 
